[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Main_game2.gd" type="Script" id=1]
[ext_resource path="res://background_image/generic_white_rectangle.png" type="Texture" id=2]
[ext_resource path="res://new_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=4]

[node name="Main_game" type="Node"]
script = ExtResource( 1 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = 140.079
margin_top = 120.0
margin_right = 424.079
margin_bottom = 206.0
border_color = Color( 1, 0.964706, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="generic_white_rectangle" type="TextureRect" parent="ReferenceRect"]
modulate = Color( 0.207843, 0.654902, 0.752941, 0.85098 )
show_behind_parent = true
margin_right = 1125.0
margin_bottom = 2000.0
rect_scale = Vector2( 0.250814, 0.0430036 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="ReferenceRect"]
modulate = Color( 0.054902, 0.141176, 0.905882, 1 )
margin_left = 6.76508
margin_top = -1.58582
margin_right = 283.765
margin_bottom = 84.4142
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "666 "
align = 1
valign = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = -20.0
margin_top = 206.0
margin_right = 290.0
margin_bottom = 606.0
rect_scale = Vector2( 2, 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 25.0
margin_right = 285.0
margin_bottom = 400.0
alignment = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 64.0
align = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 260.0
margin_bottom = 80.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 260.0
margin_bottom = 336.0
columns = 3

[node name="Button7" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_right = 43.0
margin_bottom = 56.0
text = "7"

[node name="Button8" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 51.0
margin_right = 96.0
margin_bottom = 56.0
text = "8"

[node name="Button9" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 104.0
margin_right = 148.0
margin_bottom = 56.0
text = "9"

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 64.0
margin_right = 43.0
margin_bottom = 120.0
text = "4"

[node name="Button5" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 51.0
margin_top = 64.0
margin_right = 96.0
margin_bottom = 120.0
text = "5"

[node name="Button6" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 104.0
margin_top = 64.0
margin_right = 148.0
margin_bottom = 120.0
text = "6"

[node name="Button1" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 128.0
margin_right = 43.0
margin_bottom = 184.0
text = "1"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 51.0
margin_top = 128.0
margin_right = 96.0
margin_bottom = 184.0
text = "2"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 104.0
margin_top = 128.0
margin_right = 148.0
margin_bottom = 184.0
text = "3"

[node name="Button0" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 192.0
margin_right = 43.0
margin_bottom = 248.0
text = "0"

[node name="TextureButton" type="TextureButton" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 51.0
margin_top = 192.0
margin_right = 96.0
margin_bottom = 248.0

[node name="clear_button" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
modulate = Color( 0.992188, 0.635499, 0.255798, 1 )
margin_left = 104.0
margin_top = 192.0
margin_right = 148.0
margin_bottom = 248.0
text = "C"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
modulate = Color( 0.0734863, 0.671875, 0.0968609, 1 )
margin_top = 344.0
margin_right = 260.0
margin_bottom = 400.0
text = "GO"

[node name="generic_white_rectangle" type="TextureRect" parent="."]
modulate = Color( 0.176471, 0.72549, 0.164706, 0.905882 )
show_behind_parent = true
margin_left = 248.0
margin_top = 30.0
margin_right = 1373.0
margin_bottom = 2030.0
rect_scale = Vector2( 0.12732, 0.0295628 )
texture = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
modulate = Color( 0.866667, 0.917647, 0.215686, 1 )
margin_left = 270.0
margin_top = 30.0
margin_right = 390.0
margin_bottom = 80.0

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/clear_button" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
